# ws_experiments

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/websocket_client/: __init__.py  client.py  config.py  instance.py  main.py  todos
src/websocket_server/: __init__.py  config.py  handlers.py  http.py  main.py  models.py  registry.py  server.py
tests/: __init__.py  test_registry.py
